[package]
name = "opendata-log-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Local path to opendata crates (sibling directory)
# Assumes: ../opendata/ and ../opendata-java/ are siblings
[dependencies.log]
package = "log"
path = "../../../opendata/log"

[dependencies.common]
package = "common"
path = "../../../opendata/common"
