[package]
name = "opendata-log-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

log = { git = "https://github.com/opendata-oss/opendata.git" }
common = { git = "https://github.com/opendata-oss/opendata.git" }
